# A-simple-visual-slam-system

./: CMakeLists.txt
config/: config.yaml
include/myfrontend/: camera.h  common_include.h  config.h  frame.h  g2o_types.h  map.h  mappoint.h  odometry.h
src/: camera.cc  config.cc  frame.cc  g2o_types.cc  map.cc  mappoint.cc  odometry.cc
test/: test.cc
